force-app/main/default/objects/Medical_Record__c/Medical_Record__c.object-meta.xml
<CustomObject>
    <label>Medical Record</label>
    <nameField>
        <displayFormat>MR-{000000}</displayFormat>
        <label>Medical Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medical Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>