force-app/main/default/objects/Medical_Record__c/fields/Is_Ongoing_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Is_Ongoing_Treatment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The field is used to mark if a medical record has a ongoing treatment</description>
    <label>Is Ongoing Treatment</label>
    <type>Checkbox</type>
</CustomField>