force-app/main/default/objects/Medical_Record__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <label>Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Medical Records</relationshipLabel>
    <relationshipName>Medical_Records</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>