force-app/main/default/objects/Medical_Record__c/fields/Procedure_Report__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Report__c</fullName>
    <label>Procedure Report</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>